# ComfyUI-OpenUSD

./: .gitignore  README.md  TODO  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
nodes/: convert_usd.py  load_usd.py  save_usd.py  usd_convert.py  usd_io.py  usd_utils.py  usd_view.py  view_usd.py
nodes/utils/data/: usd_vec3.py
nodes/utils/prim/: usd_composition.py  usd_datatypes.py  usd_prim_color.py  usd_prim_configure.py  usd_prim_get.py  usd_prim_set.py  usd_scene.py  usd_transform.py
nodes/utils/shader/: usd_material.py
web/: colors.js  index.html  main.js  style.css  types.js
web/components/: tree.js  viewport.js
web/lib/core/: index.js  openusd_pxr_wasm.js  urls.js
web/lib/pxr/: openusd_pxr.js
web/lib/three-loader/: openusd_three_loader.js
web/lib/utils/: openusd_utils.js
web/widgets/: color.js  tree.js  vec2.js  vec3.js  viewport.js
