[project]
name = "ComfyUI-OpenUSD"
description = "This node pack introduces OpenUSD support for ComfyUI"
version = "0.0.3"
license = { file = "LICENSE" }
dependencies = [
    "usd-core",
    "pygltflib",
    "piexif",
    "numpy",
    "trimesh"
]

[project.urls]
Repository = "https://github.com/cjhosken/ComfyUI-OpenUSD"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "cjhosken"
DisplayName = "OpenUSD"
Icon = "https://github.com/cjhosken/ComfyUI-OpenUSD/blob/main/icon.png"