[project]
name = "ComfyUI-OpenUSD"
description = "Pixar's OpenUSD pipeline integration for ComfyUI. Natively compose and render 3D scenes within your node workflows."
version = "0.0.5"
license = { file = "LICENSE" }
dependencies = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/cjhosken/ComfyUI-OpenUSD"
"Bug Tracker" = "https://github.com/cjhosken/ComfyUI-OpenUSD/issues"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "cjhosken"
DisplayName = "Pixar's OpenUSD"
Icon = "https://github.com/cjhosken/ComfyUI-OpenUSD/blob/main/icon.png"
Banner = "https://github.com/cjhosken/ComfyUI-OpenUSD/blob/main/banner.jpg"
