[project]
name = "ComfyUI-OpenUSD"
description = "Pixar's OpenUSD pipeline integration for ComfyUI. Natively compose and render 3D scenes within your node workflows."
version = "0.0.8"
license = { file = "LICENSE" }
dependencies = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/cjhosken/ComfyUI-OpenUSD"
"Bug Tracker" = "https://github.com/cjhosken/ComfyUI-OpenUSD/issues"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "cjhosken"
DisplayName = "Pixar's OpenUSD"
Icon = "https://raw.githubusercontent.com/cjhosken/ComfyUI-OpenUSD/refs/heads/main/icon.png"
Banner = "https://raw.githubusercontent.com/cjhosken/ComfyUI-OpenUSD/refs/heads/main/banner.jpg"
